--- a/api/templates/mail.html
+++ b/api/templates/mail.html
@@ -76,6 +76,6 @@
         {% endif %}
       {% endfor %}
       </div>
-      <a href="https://valo.sametkeskin.repl.co/unsubscribe/{{ email }}" style="text-decoration:underline">Abonelikten çık</a>
+      <a href="https://valo-api.sametkeskin.repl.co/unsubscribe/{{ email }}" style="text-decoration:underline">Abonelikten çık</a>
   </body>
 </html>
